03_DevOps/03_Kubernetes/Ejemplos/13_Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nombres
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  rules:
  - host: www.guestbook.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: frontend
          servicePort: 80
  - host: www.letschat.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: letschat
          servicePort: 8080
